refactor: Java 11 compat, bundle Adventure, EzCountdown 2.0.0 upgrade
- Lower maven.compiler.release 17 → 11 for broader MC server compatibility
- Convert Java 16+ syntax: records → final classes (AfkStatusDetails,
  LeaderboardEntry, LegacySerializer), pattern-matching instanceof → casts,
  switch expressions → traditional switch, Stream.toList() → Collectors.toList()
- Delete CompatibilityUtil; split into focused compat helpers:
  InventoryCompat, HeadCompat, ItemMetaCompat, MaterialCompat,
  PlayerDisplayCompat, PlayerKickCompat, SoundCompat
- Bundle/shade all 6 kyori Adventure artifacts (api, key, text, serializer-gson,
  serializer-legacy, text-minimessage) at 4.26.1; works on both Paper and Spigot
  without depending on the server's Adventure version
- Rewrite LoreUtil to use bundled MiniMessage via reflection; fix & colour
  code double-processing and deserialize() signature change in 4.26.x
- Add EzCountdown integration (EzCountdownIntegration.java): optional kick-warning
  countdown display via EzCountdown; supports TITLE, ACTION_BAR, BOSS_BAR,
  SCOREBOARD, DIALOG display types
- Upgrade EzCountdown dependency 1.4.3 → 2.0.0; migrate integration from
  PermissionAttachment visibility trick to Notification.builder().players()
- Fix plugin.yml: EzCountdown entry incorrectly appended to WorldEdit line
- Add Surefire argLine -Dnet.bytebuddy.experimental=true for Java 25 ByteBuddy
- Add smoke tests: LoreUtilSmokeTest (13), AfkStatusDetailsSmokeTest (7)
- All 113 tests passing